wip terraform course

--- a/_drafts/2018-11-10-terraform-101.md
+++ b/_drafts/2018-11-10-terraform-101.md
@@ -42,8 +42,11 @@ Using the cloud console to create resources might look easy, but for complex sta
 This is a hand-on course, each chapter we will be doing something useful and actually deploying to a cloud, while explaining the process. 
 
 1. My First Terraform Deploy, deploying an EC2 instance
+    Installing; Project file structure; Backends; Providers; Plan vs apply; 
 1. Creating an application stack with EC2, RDS, Security Groups and permissions
+    Defining multiple resources; Linking together; Changes affecting multiple resources
 1. Making Terraform modules for better reusability of components
+    Moving some components to a module
 1. 
 
 
